fix: pre code blocks now wrap lines correctly
code { white-space: nowrap } was overriding pre's line-break behavior,
causing all code block content to render as a single horizontal line.

--- a/_sass/luique/basic.scss
+++ b/_sass/luique/basic.scss
@@ -4061,8 +4061,11 @@ pre {
 }
 
 pre code {
-	color: #d63384;
-	font-style: italic;
+	color: inherit;
+	font-style: normal;
+	white-space: pre;
+	padding: 0;
+	display: block;
 }
 
 .wp-block-table.is-style-stripes tbody tr:nth-child(odd) {
